feat(07-02): add seed data and database reset workflow
- Create seed.ts with realistic test data: 1 org, 3 factories, 6 gateways (2 per factory)
- Seed uses transactions (BEGIN/COMMIT/ROLLBACK) for atomicity
- Clear existing data with TRUNCATE CASCADE before seeding
- Insert parameterized queries to prevent SQL injection
- Placeholder for password encryption (real encryption in Phase 8)
- Vary gateway models (CTC-GW-100, CTC-GW-200) and firmware versions
- Set last_seen_at for some gateways (simulate connection history)
- Include JSONB metadata with factory/gateway-specific details
- Create reset.ts for single-command database reset workflow
- Reset workflow: drop database, create database, run migrations, seed data
- Fix db:migrate npm script to use tsx for TypeScript migration support
- Log progress at each step with clear status messages
- Handle errors gracefully with ROLLBACK and exit codes

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "tsx --env-file=.env src/main.ts",
     "start": "node dist/main.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "db:migrate": "node-pg-migrate -j ts up",
+    "db:migrate": "tsx node_modules/.bin/node-pg-migrate up",
     "db:migrate:create": "node-pg-migrate create -j ts -m migrations",
     "db:seed": "tsx --env-file=.env src/database/seed.ts",
     "db:reset": "tsx --env-file=.env src/database/reset.ts",
